@@ -37,6 +37,7 @@ public class ExamResultServiceTest {
     private ExamResultServiceImpl examResultService;
 
     private ExamResult result;
+    private User technician;
 
     @BeforeEach
     void setUp() {
@@ -45,22 +46,21 @@ public class ExamResultServiceTest {
         User patient = new User();
         patient.setId("123456");
 
-        User technician = new User();
+        technician = new User();
         technician.setId("789012");
+        technician.setUsername("techUser"); // CORRECTAMENTE inicializado
 
         result = new ExamResult();
         result.setId(1L);
         result.setResultDate(LocalDate.now());
         result.setDescription("Descripción válida del resultado.");
-        result.setAttached("link/result.pdf");
         result.setExamType(examType);
         result.setPatient(patient);
         result.setTechnician(technician);
 
-        // authTech con rol de técnico
         authTech = new Authentication() {
             @Override public Collection<? extends GrantedAuthority> getAuthorities() {
-                return List.of(new SimpleGrantedAuthority("ROLE_LABTECH"));
+                return java.util.Collections.singletonList(new SimpleGrantedAuthority("ROLE_LABTECH"));
             }
             @Override public Object getCredentials() { return null; }
             @Override public Object getDetails() { return null; }
@@ -70,7 +70,6 @@ public class ExamResultServiceTest {
             @Override public String getName() { return "techUser"; }
         };
 
-        // authAdmin con rol de admin
         authAdmin = new Authentication() {
             @Override public Collection<? extends GrantedAuthority> getAuthorities() {
                 return List.of(new SimpleGrantedAuthority("ROLE_ADMIN"));
@@ -168,7 +167,7 @@ public class ExamResultServiceTest {
 
     @Test
     void updateExamResult_Valid() {
-        when(examResultRepository.existsById(1L)).thenReturn(true);
+        when(examResultRepository.findById(1L)).thenReturn(Optional.of(result));
         when(examResultRepository.save(result)).thenReturn(result);
         ExamResult updated = examResultService.updateExamResult(result, authAdmin);
         assertEquals(1L, updated.getId());
@@ -176,16 +175,17 @@ public class ExamResultServiceTest {
 
     @Test
     void updateExamResult_NotFound_Throws() {
-        when(examResultRepository.existsById(1L)).thenReturn(false);
+        when(examResultRepository.findById(1L)).thenReturn(Optional.empty());
         Exception e = assertThrows(IllegalArgumentException.class, () -> examResultService.updateExamResult(result, authAdmin));
         assertTrue(e.getMessage().contains("no existe"));
     }
 
     @Test
     void updateExamResult_ByTech_Throws() {
-        when(examResultRepository.existsById(1L)).thenReturn(true);
+        result.getTechnician().setUsername("anotherUser");
+        when(examResultRepository.findById(1L)).thenReturn(Optional.of(result));
         Exception e = assertThrows(IllegalArgumentException.class, () -> examResultService.updateExamResult(result, authTech));
-        assertTrue(e.getMessage().contains("administrador"));
+        assertTrue(e.getMessage().contains("tú creaste"));
     }
 
     @Test
@@ -219,7 +219,8 @@ public class ExamResultServiceTest {
     @Test
     void deleteExamResult_NotFound_Throws() {
         when(examResultRepository.existsById(99L)).thenReturn(false);
-        Exception e = assertThrows(IllegalArgumentException.class, () -> examResultService.removeExamResultById(99L));
+        Exception e = assertThrows(IllegalArgumentException.class,
+                () -> examResultService.removeExamResultById(99L));
         assertEquals("No se puede eliminar un resultado que no existe.", e.getMessage());
     }
 }
